--- a/.github/workflows/compile-kernel.yml
+++ b/.github/workflows/compile-kernel.yml
@@ -18,6 +18,7 @@ on:
         options:
           - unifreq
           - codesnas
+          - yplam
       kernel_version:
         description: "Select kernel version"
         required: false
