--- a/.github/workflows/compile-kernel.yml
+++ b/.github/workflows/compile-kernel.yml
@@ -13,11 +13,12 @@ on:
       kernel_source:
         description: "Select the kernel source"
         required: false
-        default: "unifreq"
+        default: "yplam"
         type: choice
         options:
           - unifreq
           - codesnas
+          - yplam
       kernel_version:
         description: "Select kernel version"
         required: false
@@ -66,11 +67,12 @@ on:
       kernel_sign:
         description: "Set the kernel custom signature"
         required: false
-        default: "-ophub"
+        default: "-yplam"
         type: choice
         options:
           - -ophub
           - -yourname
+          - -yplam
 
 env:
   TZ: America/New_York
